--- a/scss/elements/header.scss
+++ b/scss/elements/header.scss
@@ -1,12 +1,33 @@
 .header {
-  //position: fixed;
-  //width: 100%;
   padding: 20px 0;
-  //z-index: 1;
   box-shadow: 0 1px 0 0 rgba(228, 228, 228, 0.5);
+  @media (max-width: $md) {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 0;
+    z-index: 9999;
+    background: #fafafa;
+    transform : translate3d(0, 0, 0);
+    visibility: visible !important;
 
-  .btn {
-    font-size: 14px;
+    .row {
+      flex-direction: row;
+      flex-wrap: nowrap;
+
+      > :first-child {
+        order: 1;
+        margin-right: 15px;
+      }
+
+      > :nth-child(2) {
+        order: 3;
+      }
+
+      > :last-child {
+        order: 2;
+      }
+    }
   }
 
   .logo {
@@ -14,8 +35,72 @@
     width: 150px;
     padding: 5px 0;
     color: transparent;
-    background: url(../images/logo2.png) center no-repeat;
+    background: url("../images/logo.png") center no-repeat;
     background-size: 110%;
+    @media (max-width: $md) {
+      display: none;
+    }
+
+    &-mobile {
+      display: none;
+      position: relative;
+      width: 55px;
+      height: 60px;
+      padding: 0;
+      background: url("../images/logo-mobile.png") left center no-repeat;
+      background-size: 40px;
+      cursor: pointer;
+      user-select: none;
+      @media (max-width: $md) {
+        display: block;
+      }
+
+      &:before {
+        content: '';
+        position: absolute;
+        display: block;
+        right: 0;
+        top: 25px;
+        width: 6px;
+        height: 6px;
+        border-color: transparent transparent #979797 #979797;
+        border-style: solid;
+        border-width: 1px ;
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  .mobile-navigation {
+    display: block;
+    position: absolute;
+    top: 61px;
+    left: 0;
+    width: 100vw;
+    height: 390px;
+    background-color: rgba(250, 250, 250, 0.95);
+    box-shadow: 2px 0 1px 0 rgba(0, 0, 0, 0.1);
+    visibility: hidden;
+    pointer-events: none;
+    opacity: 0;
+    transition: .7s;
+
+    > .container {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-around;
+    }
+
+    a {
+      margin: 15px 0;
+    }
+
+    &.active {
+      visibility: visible;
+      pointer-events: visible;
+      opacity: 1;
+    }
   }
 
   &-navigation {
@@ -24,6 +109,9 @@
     align-items: center;
     height: 100%;
     font-size: 14px;
+    @media (max-width: $md) {
+      display: none;
+    }
 
     a {
       color: #000;
@@ -39,18 +127,25 @@
     justify-content: space-between;
     align-items: stretch;
     height: 100%;
-
-    .btn-language,
-    .btn-create-app {
-      font-size: 12px;
+    @media (max-width: $md) {
+      padding: 9px 0;
     }
 
-    .btn-create-app {
-      margin: 0 10px;
-      padding: 6px 12px;
-      font-weight: 500;
-      text-transform: capitalize;
-      box-shadow: none;
+    .btn {
+      font-size: 14px;
+
+      &-language,
+      &-create-app {
+        font-size: 12px;
+      }
+
+      &-create-app {
+        margin: 0 10px;
+        padding: 6px 12px;
+        font-weight: 500;
+        text-transform: capitalize;
+        box-shadow: none;
+      }
     }
   }
 }
