--- a/scss/screens/portfolio.scss
+++ b/scss/screens/portfolio.scss
@@ -1,5 +1,5 @@
 .portfolio {
-  margin-top: 120px;
+  padding: 120px 0 80px 0;
   text-align: center;
 
   .title {
@@ -34,6 +34,9 @@
           height: 510px;
           background: center no-repeat;
           background-size: 100%;
+          @media (max-width: $md) {
+            height: 320px;
+          }
 
           &.website {
             background-image: url("../images/website.png");
