--- a/scss/screens/reviews.scss
+++ b/scss/screens/reviews.scss
@@ -96,6 +96,11 @@
     .slide {
       position: relative;
       width: 280px;
+      @media (max-width: $md) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
 
       > * {
         opacity: .3;
@@ -117,13 +122,20 @@
         background: center no-repeat;
         background-size: 100%;
         transform: translateY(-50%);
+        @media (max-width: $md) {
+          position: relative;
+          left: auto;
+          top: auto;
+          transform: none;
+        }
       }
-
-
 
       p {
         font-size: 14px;
         padding-left: 80px;
+        @media (max-width: $md) {
+          padding-left: 0;
+        }
 
         b {
           font-size: 16px;
