--- a/scss/screens/steps.scss
+++ b/scss/screens/steps.scss
@@ -3,6 +3,18 @@
   text-align: center;
   font-size: 18px;
 
+  .row {
+    @media (max-width: $md) {
+      flex-direction: column;
+    }
+
+    .col {
+      @media (max-width: $md) {
+        flex: 1 0 50%;
+      }
+    }
+  }
+
   &-item {
     min-height: 500px;
     padding: 0 33px;
@@ -10,6 +22,17 @@
     border-radius: 6px;
     background-color: #ffffff;
     box-shadow: 0 0 10px 0 rgba(230, 230, 230, 0.5);
+    @media (max-width: $lg) {
+      min-height: 520px;
+      padding: 0 31px;
+    }
+    @media (max-width: $md) {
+      padding:  0 120px;
+      margin: 30px 0;
+    }
+    @media (max-width: $sm) {
+      padding:  0 31px;
+    }
 
     .icon {
       width: 86px;
