--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,3 +3,9 @@ $color-button: #99cc33;
 $color-button-hover: #60A510;
 
 $header-height: 78px;
+
+//media
+$sm: 768px;
+$md: 992px;
+$lg: 1200px;
+$xl: 1450px;
