--- a/scss/text.scss
+++ b/scss/text.scss
@@ -20,6 +20,11 @@ p {
     line-height: 44px;
     font-size: 28px;
   }
+  @media (max-width: $sm) {
+    line-height: 38px;
+    font-weight: 500;
+    font-size: 20px;
+  }
 }
 
 .subtitle {
