--- a/scss/screens/banner.scss
+++ b/scss/screens/banner.scss
@@ -11,6 +11,9 @@ section.banner {
       min-height: 100vh;
       padding-top: 83px;
     }
+    @media (max-width: $sm) {
+      justify-content: space-around;
+    }
   }
 
   .title-container {
@@ -27,9 +30,6 @@ section.banner {
       transform: none;
       text-align: center;
     }
-    @media (max-width: $sm) {
-
-    }
 
     .title {
       text-align: left;
@@ -42,7 +42,10 @@ section.banner {
         text-align: center;
         font-size: 20px;
       }
-
+      @media (max-width: $sm) {
+        line-height: 30px;
+        font-size: 17px;
+      }
     }
 
     .subtitle {
@@ -55,6 +58,10 @@ section.banner {
       }
       @media (max-width: $md) {
         font-size: 18px;
+      }
+      @media (max-width: $sm) {
+        margin: 12px 0 16px 0;
+        font-size: 16px;
       }
     }
 
@@ -151,8 +158,8 @@ section.banner {
 
     &-4 {
       position: absolute;
-      top: 85px;
-      right: 89px;
+      top: 39px;
+      right: 49px;
       background-image: url("../images/banner/banner-bg-4.png");
       background-size: 100%;
       z-index: 1;
