--- a/scss/screens/counter.scss
+++ b/scss/screens/counter.scss
@@ -3,6 +3,9 @@
   text-align: center;
   font-size: 50px;
   background-color: #fff;
+  @media (max-width: $sm) {
+
+  }
 
   &-title {
     margin-bottom: 50px;
@@ -19,5 +22,31 @@
     .flip-clock-divider.seconds {
       display: none;
     }
+  }
+
+  .clock-container {
+    @media (max-width: $sm) {
+      max-width: 320px;
+      margin: 0 auto;
+      padding: 8px;
+
+      .flip-clock-divider .flip-clock-label {
+        right: -55px;
+      }
+
+      .flip-clock-divider.minutes .flip-clock-label {
+        right: -65px;
+      }
+
+    }
+  }
+
+  //TODO refactoring
+  @media (max-width: $sm) {
+    .flip-clock-wrapper ul {width: 40px;height: 78px;margin: 0 2px;}
+    .flip-clock-wrapper ul li {line-height: 78px;}
+    .flip-clock-wrapper ul li a div div.inn {border-radius: 3px;font-size: 50px;}
+    .flip-clock-wrapper ul li a div.down {border-bottom-left-radius: 3px; border-bottom-right-radius: 3px;}
+    .flip-clock-wrapper ul li a div.up:after {top: 38px;height: 2px;}
   }
 }
