--- a/scss/screens/referral.scss
+++ b/scss/screens/referral.scss
@@ -3,6 +3,9 @@
   font-weight: 700;
   line-height: 29px;
   font-size: 18px;
+  @media (max-width: $md) {
+    font-size: 16px;
+  }
 
   .title {
     margin-bottom: 40px;
@@ -12,6 +15,9 @@
     position: relative;
     height: 386px;
     margin-bottom: 40px;
+    @media (max-width: $sm) {
+      height: 316px;
+    }
 
     .external-bg {
       position: absolute;
@@ -52,6 +58,9 @@
       width: 100%;
       height: 100%;
       background: url("../images/subscription.svg") center no-repeat;
+      @media (max-width: $sm) {
+        background-size: 100%;
+      }
     }
 
     .left-hand {
@@ -63,6 +72,9 @@
       }
       @media (max-width: $md) {
         left: 170px;
+      }
+      @media (max-width: $sm) {
+        left: 10%;
       }
     }
 
@@ -76,7 +88,9 @@
       @media (max-width: $md) {
         left: 350px;
       }
-
+      @media (max-width: $sm) {
+        left: 54%;
+      }
     }
   }
 
