--- a/scss/style.css
+++ b/scss/style.css
@@ -26,6 +26,11 @@ p {
     .title {
       line-height: 44px;
       font-size: 28px; } }
+  @media (max-width: 768px) {
+    .title {
+      line-height: 38px;
+      font-weight: 500;
+      font-size: 20px; } }
 
 .subtitle {
   line-height: 32px;
@@ -273,6 +278,14 @@ section.banner {
         justify-content: flex-end;
         min-height: 100vh;
         padding-top: 83px; } }
+    @media (max-width: 768px) {
+      section.banner > .container {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: flex-end;
+        min-height: 100vh;
+        padding-top: 83px; } }
   section.banner .title-container {
     position: absolute;
     top: 50%;
@@ -298,6 +311,10 @@ section.banner {
         section.banner .title-container .title {
           text-align: center;
           font-size: 20px; } }
+      @media (max-width: 768px) {
+        section.banner .title-container .title {
+          line-height: 30px;
+          font-size: 17px; } }
     section.banner .title-container .subtitle {
       margin: 24px 0 33px 0;
       font-weight: 300;
@@ -309,6 +326,10 @@ section.banner {
       @media (max-width: 992px) {
         section.banner .title-container .subtitle {
           font-size: 18px; } }
+      @media (max-width: 768px) {
+        section.banner .title-container .subtitle {
+          margin: 12px 0 16px 0;
+          font-size: 16px; } }
     section.banner .title-container .btn-create-app {
       padding: 17px 23px 17px 22px; }
   section.banner .banner-container {
@@ -390,8 +411,8 @@ section.banner {
       background-size: 100%; }
     section.banner .banner-bg-4 {
       position: absolute;
-      top: 85px;
-      right: 89px;
+      top: 39px;
+      right: 49px;
       background-image: url("../images/banner/banner-bg-4.png");
       background-size: 100%;
       z-index: 1; }
@@ -431,10 +452,9 @@ section.banner {
       left: 830px; }
   .about-us .phone {
     position: relative;
-    width: 636px;
+    width: 100%;
     min-height: 401px;
     margin: auto;
-    background: url("../images/about-us/phone.svg") center no-repeat;
     background-size: 90%; }
   .about-us .message {
     position: absolute;
@@ -489,9 +509,8 @@ section.banner {
     z-index: 1; }
   .about-us #animate-about-us {
     position: absolute;
-    left: -337px;
     top: -122px;
-    width: 1283px; }
+    width: 100%; }
 
 .steps {
   padding: 100px 0;
@@ -520,7 +539,7 @@ section.banner {
         margin: 30px 0; } }
     @media (max-width: 768px) {
       .steps-item {
-        padding: 0 31px; } }
+        padding: 0 18px; } }
     .steps-item .icon {
       width: 86px;
       height: 126px;
@@ -560,15 +579,60 @@ section.banner {
     margin: 0 auto; }
     .counter #clock .flip-clock-divider.seconds {
       display: none; }
+  @media (max-width: 768px) {
+    .counter .clock-container {
+      max-width: 320px;
+      margin: 0 auto;
+      padding: 8px; }
+      .counter .clock-container .flip-clock-divider .flip-clock-label {
+        right: -55px; }
+      .counter .clock-container .flip-clock-divider.minutes .flip-clock-label {
+        right: -65px; } }
+  @media (max-width: 768px) {
+    .counter .flip-clock-wrapper ul {
+      width: 40px;
+      height: 78px;
+      margin: 0 2px; }
+    .counter .flip-clock-wrapper ul li {
+      line-height: 78px; }
+    .counter .flip-clock-wrapper ul li a div div.inn {
+      border-radius: 3px;
+      font-size: 50px; }
+    .counter .flip-clock-wrapper ul li a div.down {
+      border-bottom-left-radius: 3px;
+      border-bottom-right-radius: 3px; }
+    .counter .flip-clock-wrapper ul li a div.up:after {
+      top: 38px;
+      height: 2px; } }
 
 .benefits {
   text-align: center;
   padding: 120px 0; }
+  @media (max-width: 768px) {
+    .benefits .order_1 {
+      order: 1; }
+    .benefits .order_2 {
+      order: 2; }
+    .benefits .order_3 {
+      order: 3; }
+    .benefits .order_4 {
+      order: 4; }
+    .benefits .order_5 {
+      order: 5; }
+    .benefits .order_6 {
+      order: 6; }
+    .benefits .order_7 {
+      order: 7; }
+    .benefits .order_8 {
+      order: 8; } }
   .benefits .title {
     margin-bottom: 100px;
     font-weight: 500; }
   .benefits .subtitle {
     margin-bottom: 14px; }
+    @media (max-width: 768px) {
+      .benefits .subtitle {
+        line-height: 24px; } }
   .benefits p {
     font-size: 16px; }
   .benefits .icon {
@@ -603,12 +667,18 @@ section.banner {
   font-weight: 700;
   line-height: 29px;
   font-size: 18px; }
+  @media (max-width: 992px) {
+    .referral {
+      font-size: 16px; } }
   .referral .title {
     margin-bottom: 40px; }
   .referral .banner {
     position: relative;
     height: 386px;
     margin-bottom: 40px; }
+    @media (max-width: 768px) {
+      .referral .banner {
+        height: 316px; } }
     .referral .banner .external-bg {
       position: absolute;
       display: block;
@@ -637,6 +707,9 @@ section.banner {
       width: 100%;
       height: 100%;
       background: url("../images/subscription.svg") center no-repeat; }
+      @media (max-width: 768px) {
+        .referral .content .subscription {
+          background-size: 100%; } }
     .referral .content .left-hand {
       top: 30%;
       left: 100px;
@@ -647,6 +720,9 @@ section.banner {
       @media (max-width: 992px) {
         .referral .content .left-hand {
           left: 170px; } }
+      @media (max-width: 768px) {
+        .referral .content .left-hand {
+          left: 10%; } }
     .referral .content .right-hand {
       top: 40%;
       left: 300px;
@@ -657,6 +733,9 @@ section.banner {
       @media (max-width: 992px) {
         .referral .content .right-hand {
           left: 350px; } }
+      @media (max-width: 768px) {
+        .referral .content .right-hand {
+          left: 54%; } }
   .referral p {
     margin-bottom: 85px;
     font-weight: 500; }
