--- a/scss/elements/header.scss
+++ b/scss/elements/header.scss
@@ -76,7 +76,7 @@
     position: absolute;
     top: 61px;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 390px;
     background-color: rgba(250, 250, 250, 0.95);
     box-shadow: 2px 0 1px 0 rgba(0, 0, 0, 0.1);
