--- a/scss/screens/about-platform.scss
+++ b/scss/screens/about-platform.scss
@@ -26,6 +26,9 @@
 
     &-item {
       padding: 0 50px;
+      @media (max-width: $md) {
+        padding: 0;
+      }
 
       &:nth-child(2) {
         border-right: 1px solid #e5e5e5;
