--- a/scss/style.css
+++ b/scss/style.css
@@ -138,7 +138,7 @@ a:hover {
     position: absolute;
     top: 61px;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 390px;
     background-color: rgba(250, 250, 250, 0.95);
     box-shadow: 2px 0 1px 0 rgba(0, 0, 0, 0.1);
@@ -280,12 +280,7 @@ section.banner {
         padding-top: 83px; } }
     @media (max-width: 768px) {
       section.banner > .container {
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-        justify-content: flex-end;
-        min-height: 100vh;
-        padding-top: 83px; } }
+        justify-content: space-around; } }
   section.banner .title-container {
     position: absolute;
     top: 50%;
@@ -703,6 +698,10 @@ section.banner {
       width: 140px;
       height: 150px;
       background: center no-repeat; }
+      @media (max-width: 768px) {
+        .referral .content-bg {
+          width: 120px;
+          background-size: 100%; } }
     .referral .content .subscription {
       width: 100%;
       height: 100%;
@@ -744,6 +743,9 @@ section.banner {
       border-radius: 10px;
       background-color: #ffffff;
       box-shadow: 0 0 10px 0 rgba(230, 230, 230, 0.5); }
+      @media (max-width: 992px) {
+        .referral p.business-offer {
+          padding: 25px 6px; } }
   .referral .text-pink {
     color: #a62073; }
   .referral .text-green {
@@ -882,6 +884,9 @@ section.banner {
         padding: 24px 40px; } }
     .about-platform .calculate-item {
       padding: 0 50px; }
+      @media (max-width: 992px) {
+        .about-platform .calculate-item {
+          padding: 0; } }
       .about-platform .calculate-item:nth-child(2) {
         border-right: 1px solid #e5e5e5;
         border-left: 1px solid #e5e5e5; }
@@ -921,6 +926,9 @@ section.banner {
     position: relative;
     margin-bottom: 50px;
     overflow: hidden; }
+    @media (max-width: 768px) {
+      .portfolio .slider .desktop-slide {
+        display: none; } }
     .portfolio .slider .slide {
       display: flex; }
       .portfolio .slider .slide-container {
