mobile about us

--- a/scss/screens/about-us.scss
+++ b/scss/screens/about-us.scss
@@ -1,116 +1,87 @@
 .about-us {
   display: flex;
   flex-direction: column;
+  padding: 60px 0 100px 0;
   font-size: 18px;
-  margin-bottom: 200px;
 
   .title {
     max-width: 930px;
     margin: 0 auto 120px auto;
+    @media (max-width: $md) {
+      margin: 0 auto 40px auto;
+    }
   }
 
   .text-container {
-    position: relative;
-  }
-
-  p {
-    position: absolute;
-    max-width: 270px;
-
-    &.top-left {
-      top: 30px;
-      left: 0;
+    display: none;
+    @media (max-width: $md) {
+      display: block;
     }
 
-    &.top-right {
-      top: -40px;
-      left: 878px;
+    p {
+      position: relative;
+      padding-left: 20px;
+      margin-bottom: 40px;
+      text-align: left;
     }
 
-    &.bottom-left {
-      bottom: -350px;
-      left: 0;
-    }
+    .icon {
+      &:before {
+        content: '';
+        position: absolute;
+        display: inline-block;
+        left: 0;
+        top: 5px;
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+      }
 
-    &.bottom-right {
-      max-width: 310px;
-      bottom: -390px;
-      left: 830px;
+      &-green {
+        &:before {
+          background-color: #99cc33;
+        }
+      }
+
+      &-pink {
+        &:before {
+          background-color: #d32992;
+        }
+      }
+
+      &-orange {
+        &:before {
+          background-color: #fec502;
+        }
+      }
+
+      &-dark-green {
+        &:before {
+          background-color: #60a510;
+        }
+      }
     }
   }
 
   .phone {
     position: relative;
-    //width: 636px;
     width: 100%;
     min-height: 401px;
     margin: auto;
-    //background: url("../images/about-us/phone.svg") center no-repeat;
     background-size: 90%;
+    @media (max-width: $md) {
+      display: none;
+    }
   }
 
-  .message {
-    position: absolute;
-    left: 153px;
-    top: -22px;
-    width: 134px;
-    height: 141px;
-    background: url("../images/about-us/message.svg") center no-repeat;
-    background-size: 100%;
-  }
-
-  .paint-can {
-    position: absolute;
-    bottom: 65px;
-    left: 368px;
-    width: 130px;
-    height: 108px;
-    background: url("../images/about-us/panit-can.svg") top right no-repeat,
-                url("../images/about-us/brush.svg") bottom left no-repeat;
-  }
-
-  .money {
-    position: absolute;
-    top: 116px;
-    left: 62px;
-    width: 54px;
-    height: 90px;
-    background: url("../images/about-us/money.svg") center no-repeat;
-    background-size: 100%;
-    z-index: 1;
-  }
-
-  .gift-box {
-    position: absolute;
-    top: 183px;
-    right: 23px;
-    width: 74px;
-    height: 93px;
-    background: url("../images/about-us/gift-box.svg") center no-repeat;
-    background-size: 100%;
-    z-index: 1;
-  }
-
-  .clock {
-    position: absolute;
-    top: 352px;
-    left: 68px;
-    width: 62px;
-    height: 51px;
-    background: url("../images/about-us/clock.svg") center no-repeat;
-    background-size: 100%;
-    z-index: 1;
-  }
-
-  .book {
-    position: absolute;
-    bottom: -12px;
-    left: 273px;
-    width: 115px;
-    height: 78px;
-    background: url("../images/about-us/book.svg") center no-repeat;
-    background-size: 100%;
-    z-index: 1;
+  .banner-mobile {
+    display: none;
+    @media (max-width: $md) {
+      display: block;
+      height: 500px;
+      background: url("../images/banner-mobile.svg") center no-repeat;
+      background-size: 80%;
+    }
   }
 
   #animate-about-us {
